Prevent post titles from overflowing horizontally past the page content width

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -257,6 +257,10 @@ em, i {
   color: $brand-color;
 }
 
+.post-title-link-container {
+  overflow: auto;
+}
+
 .post-link {
   display: inline;
   @include relative-font-size(1.5);
